--- a/main.html
+++ b/main.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Calculate Sum</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <h1 id="heading">Hello, Welcome to JS</h1>
 
+  <div>
+    <label for="n1">Enter First Number:</label>
+    <input type="number" id="n1">
+  </div>
+
+  <div>
+    <label for="n2">Enter Second Number:</label>
+    <input type="number" id="n2">
+  </div>
+
+  <button id="sum_btn">Calculate</button>
+
+  <h3 id="sum"></h3>
+
+  <script src="script.js"></script>
 </body>
-
 </html>
