--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
 
   <button id="sum_btn">Calculate</button>
 
-  <h3 id="sum"></h3>
+  <h3 id="Sum"></h3>
 
   <script src="script.js"></script>
 </body>
